some more experiments with tokenizers

--- a/experiments/tokenization/tokenizers.ipynb
+++ b/experiments/tokenization/tokenizers.ipynb
@@ -352,6 +352,87 @@
     }
    ],
    "execution_count": 43
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "## Generating Training examples",
+   "id": "ce16291dea200ba7"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T13:42:26.824615Z",
+     "start_time": "2025-08-13T13:42:26.820200Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from itertools import islice, repeat, chain\n",
+    "from collections import deque\n",
+    "\n",
+    "def encoding_generator(texts: Iterable[str], *, tokenizer=tiktoken.get_encoding(\"gpt2\")) -> list[int]:\n",
+    "    texts_list = [text for text in texts]\n",
+    "    encodings = tokenizer.encode_batch(texts_list, allowed_special={\"<|endoftext|>\"})\n",
+    "    eot_id = tokenizer.encode_single_token(\"<|endoftext|>\")\n",
+    "    collected_encodings = list()\n",
+    "    for encoding in encodings:\n",
+    "        if encoding:\n",
+    "            if collected_encodings:\n",
+    "                collected_encodings.append(eot_id)\n",
+    "            collected_encodings.extend(encoding)\n",
+    "    return collected_encodings\n",
+    "\n",
+    "def samples_generator(texts: Iterable[str], *, tokenizer=tiktoken.get_encoding(\"gpt2\"), context_size=50) -> Iterator[tuple[list[int], int]]:\n",
+    "    padding_id = tokenizer.encode_single_token(\"<|endoftext|>\")\n",
+    "    padding_iterator = repeat(padding_id, context_size-1)\n",
+    "    encodings = encoding_generator(texts, tokenizer=tokenizer)\n",
+    "    encoding_iterator = chain(padding_iterator, iter(encodings))\n",
+    "    window = deque(islice(encoding_iterator, context_size), maxlen=context_size)\n",
+    "    for x in encoding_iterator:\n",
+    "        current_sample: tuple[list[int], int] = (list(window), x)\n",
+    "        yield current_sample\n",
+    "        window.append(x)\n",
+    "\n",
+    "samples = samples_generator(test_texts, context_size=5)\n",
+    "\n",
+    "for sample in samples:\n",
+    "    print(f\"{sample[0]}: {sample[1]}\")\n"
+   ],
+   "id": "6cfc5561d6e6089",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50256, 50256, 50256, 50256, 1212]: 318\n",
+      "[50256, 50256, 50256, 1212, 318]: 257\n",
+      "[50256, 50256, 1212, 318, 257]: 2420\n",
+      "[50256, 1212, 318, 257, 2420]: 351\n",
+      "[1212, 318, 257, 2420, 351]: 402\n",
+      "[318, 257, 2420, 351, 402]: 4741\n",
+      "[257, 2420, 351, 402, 4741]: 72\n",
+      "[2420, 351, 402, 4741, 72]: 861\n",
+      "[351, 402, 4741, 72, 861]: 3118\n",
+      "[402, 4741, 72, 861, 3118]: 47083\n",
+      "[4741, 72, 861, 3118, 47083]: 272\n",
+      "[72, 861, 3118, 47083, 272]: 429\n",
+      "[861, 3118, 47083, 272, 429]: 0\n",
+      "[3118, 47083, 272, 429, 0]: 843\n",
+      "[47083, 272, 429, 0, 843]: 523\n",
+      "[272, 429, 0, 843, 523]: 319\n",
+      "[429, 0, 843, 523, 319]: 13\n",
+      "[0, 843, 523, 319, 13]: 50256\n",
+      "[843, 523, 319, 13, 50256]: 464\n",
+      "[523, 319, 13, 50256, 464]: 1306\n",
+      "[319, 13, 50256, 464, 1306]: 530\n",
+      "[13, 50256, 464, 1306, 530]: 0\n"
+     ]
+    }
+   ],
+   "execution_count": 46
   }
  ],
  "metadata": {
