some more experiments with tokenizers

--- a/experiments/tokenization/tokenizers.ipynb
+++ b/experiments/tokenization/tokenizers.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-13T12:25:41.213449Z",
-     "start_time": "2025-08-13T12:25:41.211107Z"
+     "end_time": "2025-08-13T14:07:38.211731Z",
+     "start_time": "2025-08-13T14:07:38.209236Z"
     }
    },
    "cell_type": "code",
@@ -46,7 +46,7 @@
    ],
    "id": "3e9b9a0c419e8730",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -61,8 +61,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T11:05:17.371894Z",
-     "start_time": "2025-08-13T11:05:17.368882Z"
+     "end_time": "2025-08-13T14:07:38.235626Z",
+     "start_time": "2025-08-13T14:07:38.214716Z"
     }
    },
    "cell_type": "code",
@@ -82,7 +82,6 @@
     "display(Markdown(result_markdown))"
    ],
    "id": "7989ac8b1a3271ad",
-   "execution_count": 11,
    "outputs": [
     {
      "data": {
@@ -94,15 +93,21 @@
      "metadata": {},
      "output_type": "display_data"
     }
-   ]
+   ],
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T14:07:38.266064Z",
+     "start_time": "2025-08-13T14:07:38.264756Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "7e62ade7fb243648"
+   "id": "7e62ade7fb243648",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -113,8 +118,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T11:29:45.348996Z",
-     "start_time": "2025-08-13T11:29:45.343804Z"
+     "end_time": "2025-08-13T14:07:38.319882Z",
+     "start_time": "2025-08-13T14:07:38.314347Z"
     }
    },
    "cell_type": "code",
@@ -160,13 +165,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 27
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T12:59:56.012333Z",
-     "start_time": "2025-08-13T12:59:56.004719Z"
+     "end_time": "2025-08-13T14:07:38.370870Z",
+     "start_time": "2025-08-13T14:07:38.363295Z"
     }
    },
    "cell_type": "code",
@@ -298,7 +303,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 38
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -320,8 +325,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T13:08:28.673585Z",
-     "start_time": "2025-08-13T13:08:28.670302Z"
+     "end_time": "2025-08-13T14:07:41.634384Z",
+     "start_time": "2025-08-13T14:07:39.065975Z"
     }
    },
    "cell_type": "code",
@@ -351,21 +356,24 @@
      ]
     }
    ],
-   "execution_count": 43
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "## Generating Training examples",
-   "id": "ce16291dea200ba7"
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T13:42:26.824615Z",
-     "start_time": "2025-08-13T13:42:26.820200Z"
+     "end_time": "2025-08-13T14:07:41.684150Z",
+     "start_time": "2025-08-13T14:07:41.682437Z"
+    }
+   },
+   "cell_type": "markdown",
+   "source": "## Generating Training examples",
+   "id": "31db4b6a1a50d6a0"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T14:08:42.628831Z",
+     "start_time": "2025-08-13T14:08:42.623700Z"
     }
    },
    "cell_type": "code",
@@ -385,16 +393,17 @@
     "            collected_encodings.extend(encoding)\n",
     "    return collected_encodings\n",
     "\n",
-    "def samples_generator(texts: Iterable[str], *, tokenizer=tiktoken.get_encoding(\"gpt2\"), context_size=50) -> Iterator[tuple[list[int], int]]:\n",
+    "def samples_generator(texts: Iterable[str], *, tokenizer=tiktoken.get_encoding(\"gpt2\"), context_size=50) -> Iterator[tuple[list[int], list[int]]]:\n",
     "    padding_id = tokenizer.encode_single_token(\"<|endoftext|>\")\n",
     "    padding_iterator = repeat(padding_id, context_size-1)\n",
     "    encodings = encoding_generator(texts, tokenizer=tokenizer)\n",
     "    encoding_iterator = chain(padding_iterator, iter(encodings))\n",
     "    window = deque(islice(encoding_iterator, context_size), maxlen=context_size)\n",
     "    for x in encoding_iterator:\n",
-    "        current_sample: tuple[list[int], int] = (list(window), x)\n",
-    "        yield current_sample\n",
+    "        source_window = list(window)\n",
     "        window.append(x)\n",
+    "        target_window = list(window)\n",
+    "        yield (source_window, target_window)\n",
     "\n",
     "samples = samples_generator(test_texts, context_size=5)\n",
     "\n",
@@ -407,32 +416,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[50256, 50256, 50256, 50256, 1212]: 318\n",
-      "[50256, 50256, 50256, 1212, 318]: 257\n",
-      "[50256, 50256, 1212, 318, 257]: 2420\n",
-      "[50256, 1212, 318, 257, 2420]: 351\n",
-      "[1212, 318, 257, 2420, 351]: 402\n",
-      "[318, 257, 2420, 351, 402]: 4741\n",
-      "[257, 2420, 351, 402, 4741]: 72\n",
-      "[2420, 351, 402, 4741, 72]: 861\n",
-      "[351, 402, 4741, 72, 861]: 3118\n",
-      "[402, 4741, 72, 861, 3118]: 47083\n",
-      "[4741, 72, 861, 3118, 47083]: 272\n",
-      "[72, 861, 3118, 47083, 272]: 429\n",
-      "[861, 3118, 47083, 272, 429]: 0\n",
-      "[3118, 47083, 272, 429, 0]: 843\n",
-      "[47083, 272, 429, 0, 843]: 523\n",
-      "[272, 429, 0, 843, 523]: 319\n",
-      "[429, 0, 843, 523, 319]: 13\n",
-      "[0, 843, 523, 319, 13]: 50256\n",
-      "[843, 523, 319, 13, 50256]: 464\n",
-      "[523, 319, 13, 50256, 464]: 1306\n",
-      "[319, 13, 50256, 464, 1306]: 530\n",
-      "[13, 50256, 464, 1306, 530]: 0\n"
+      "[50256, 50256, 50256, 50256, 1212]: [50256, 50256, 50256, 1212, 318]\n",
+      "[50256, 50256, 50256, 1212, 318]: [50256, 50256, 1212, 318, 257]\n",
+      "[50256, 50256, 1212, 318, 257]: [50256, 1212, 318, 257, 2420]\n",
+      "[50256, 1212, 318, 257, 2420]: [1212, 318, 257, 2420, 351]\n",
+      "[1212, 318, 257, 2420, 351]: [318, 257, 2420, 351, 402]\n",
+      "[318, 257, 2420, 351, 402]: [257, 2420, 351, 402, 4741]\n",
+      "[257, 2420, 351, 402, 4741]: [2420, 351, 402, 4741, 72]\n",
+      "[2420, 351, 402, 4741, 72]: [351, 402, 4741, 72, 861]\n",
+      "[351, 402, 4741, 72, 861]: [402, 4741, 72, 861, 3118]\n",
+      "[402, 4741, 72, 861, 3118]: [4741, 72, 861, 3118, 47083]\n",
+      "[4741, 72, 861, 3118, 47083]: [72, 861, 3118, 47083, 272]\n",
+      "[72, 861, 3118, 47083, 272]: [861, 3118, 47083, 272, 429]\n",
+      "[861, 3118, 47083, 272, 429]: [3118, 47083, 272, 429, 0]\n",
+      "[3118, 47083, 272, 429, 0]: [47083, 272, 429, 0, 843]\n",
+      "[47083, 272, 429, 0, 843]: [272, 429, 0, 843, 523]\n",
+      "[272, 429, 0, 843, 523]: [429, 0, 843, 523, 319]\n",
+      "[429, 0, 843, 523, 319]: [0, 843, 523, 319, 13]\n",
+      "[0, 843, 523, 319, 13]: [843, 523, 319, 13, 50256]\n",
+      "[843, 523, 319, 13, 50256]: [523, 319, 13, 50256, 464]\n",
+      "[523, 319, 13, 50256, 464]: [319, 13, 50256, 464, 1306]\n",
+      "[319, 13, 50256, 464, 1306]: [13, 50256, 464, 1306, 530]\n",
+      "[13, 50256, 464, 1306, 530]: [50256, 464, 1306, 530, 0]\n"
      ]
     }
    ],
-   "execution_count": 46
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Generate pytorch Dataset",
+   "id": "4fe22b52ac4e99d7"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-13T14:21:07.045271Z",
+     "start_time": "2025-08-13T14:21:06.986453Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "class GPTDatasetV1(Dataset):\n",
+    "    def __init__(self, txt, *, tokenizer=tiktoken.get_encoding(\"gpt2\"), context_size=50, stride=1):\n",
+    "        self.input_ids = []\n",
+    "        self.target_ids = []\n",
+    "\n",
+    "        samples = samples_generator([txt], tokenizer=tokenizer, context_size=context_size)\n",
+    "        sliced_samples = islice(samples, None, None, stride)\n",
+    "        for sample in samples:\n",
+    "            self.input_ids.append(torch.tensor(sample[0]))\n",
+    "            self.target_ids.append(torch.tensor(sample[1]))\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.input_ids)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.input_ids[idx], self.target_ids[idx]\n",
+    "\n",
+    "\n",
+    "def create_dataloader(txt, *, batch_size=4, max_length=256, stride=128, shuffle=True, drop_last=True, num_workers=0):\n",
+    "    tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+    "    dataset = GPTDatasetV1(txt, tokenizer=tokenizer, context_size=max_length, stride=stride)\n",
+    "    dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=shuffle, drop_last=drop_last, num_workers=num_workers )\n",
+    "    return dataloader\n",
+    "\n",
+    "dataloader = create_dataloader(example_text, batch_size=1, max_length=4, stride=1, shuffle=False)\n",
+    "data_iter = iter(dataloader)\n",
+    "first_batch = next(data_iter)\n",
+    "print(first_batch)"
+   ],
+   "id": "d1d45ee940c5b3b3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[tensor([[50256, 50256, 50256,    40]]), tensor([[50256, 50256,    40,   367]])]\n"
+     ]
+    }
+   ],
+   "execution_count": 16
   }
  ],
  "metadata": {
