a bit more safe

--- a/experiments/tools/path-tools.ipynb
+++ b/experiments/tools/path-tools.ipynb
@@ -10,8 +10,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-14T07:08:44.620283Z",
-     "start_time": "2025-08-14T07:08:44.617617Z"
+     "end_time": "2025-08-14T07:23:24.859032Z",
+     "start_time": "2025-08-14T07:23:24.856014Z"
     }
    },
    "cell_type": "code",
@@ -25,7 +25,10 @@
     "    current_notebook = os.environ.get(\"JPY_SESSION_NAME\")\n",
     "    if current_notebook is None:\n",
     "        raise EnvironmentError(\"JPY_SESSION_NAME is not set\")\n",
-    "    return Path(current_notebook).parent\n",
+    "    current_notebook_path = Path(current_notebook)\n",
+    "    if not current_notebook_path.exists() or not current_notebook_path.is_file():\n",
+    "        raise ValueError(f\"The value of JPY_SESSION_NAME is `{current_notebook}` which is not an existing file.\")\n",
+    "    return current_notebook_path.parent\n",
     "\n",
     "def get_project_path() -> Path:\n",
     "    \"\"\"Try to automagically determine the base directory of project\n",
@@ -54,8 +57,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-14T07:08:46.689787Z",
-     "start_time": "2025-08-14T07:08:46.687398Z"
+     "end_time": "2025-08-14T07:23:24.900580Z",
+     "start_time": "2025-08-14T07:23:24.898333Z"
     }
    },
    "cell_type": "code",
@@ -66,7 +69,6 @@
     "print(f\"The current Notebook is located at `{relative_file_path}` relative to the current project.\")"
    ],
    "id": "f6cff855bfc91024",
-   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -75,7 +77,8 @@
       "The current Notebook is located at `experiments/tools/path-tools.ipynb` relative to the current project.\n"
      ]
     }
-   ]
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
